# mimiqcircuits-python

./: .buildinfo  .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  genindex.html  index.html  installation.html  mimiq_documentation.html  objects.inv  py-modindex.html  pypi_package.md  pyproject.toml  quick_start.html  res_batch_1.pb  res_single.pb  search.html  searchindex.js  setup.py  tutorial.html
.doctrees/: environment.pickle  index.doctree  installation.doctree  mimiq_documentation.doctree  quick_start.doctree  tutorial.doctree
.doctrees/apidocs/: mimiqcircuits.doctree
.doctrees/manual/: advanced.doctree  circuits.doctree  classical_ops.doctree  compilation.doctree  core_concepts.doctree  execution.doctree  getting_started.doctree  hamiltonian.doctree  implementing_backends.doctree  import_export.doctree  index.doctree  installation.doctree  local_statevector.doctree  loss.doctree  noise.doctree  non_unitary_ops.doctree  openqasm.doctree  operations.doctree  overview.doctree  remote_execution.doctree  simulation.doctree  simulation_parameters.doctree  special_ops.doctree  special_topics.doctree  statistical_ops.doctree  symbolic_ops.doctree  unitary_gates.doctree  zops.doctree
.doctrees/usecases/: circuit_tester.doctree  index.doctree  vqe.doctree
.github/workflows/: documentation.yml  pypi.yml  python-package.yml  test.yml
_modules/: index.html  mimiqcircuits.html
_modules/mimiqcircuits/: bitstrings.html  canvas.html  circuit.html  circuit_extras.html  circuitrules.html  complex.html  gatedecl.html  hamiltonian.html  instruction.html  lazy.html  lossmodel.html  noisemodel.html  qcsresults.html  remote.html
_sources/: index.rst.txt  installation.rst.txt  tutorial.rst.txt
_sources/apidocs/: mimiqcircuits.rst.txt
_sources/manual/: advanced.rst.txt  circuits.rst.txt  compilation.rst.txt  core_concepts.rst.txt  execution.rst.txt  hamiltonian.rst.txt  implementing_backends.rst.txt  import_export.rst.txt  index.rst.txt  installation.rst.txt  local_statevector.rst.txt  loss.rst.txt  noise.rst.txt  non_unitary_ops.rst.txt  openqasm.rst.txt  operations.rst.txt  overview.rst.txt  remote_execution.rst.txt  simulation.rst.txt  special_ops.rst.txt  (+6 more)
apidocs/: mimiqcircuits.html
circuits/: __init__.py  gates.py  jsonschema.py  quantumcircuit.py  test.py
docs/: .gitignore  about.rst  basics.rst  conf.py  contents.rst  getting_started.rst  index.rst  mimiq_documentation.rst  quick_start.rst  reference.rst  tutorial.rst
manual/: advanced.html  circuits.html  classical_ops.html  compilation.html  core_concepts.html  execution.html  getting_started.html  hamiltonian.html  implementing_backends.html  import_export.html  index.html  installation.html  local_statevector.html  loss.html  noise.html  non_unitary_ops.html  openqasm.html  operations.html  overview.html  remote_execution.html  simulation.html  simulation_parameters.html  special_ops.html  special_topics.html  statistical_ops.html  symbolic_ops.html  unitary_gates.html  zops.html
mimiqcircuits/: __init__.py  barrier.py  bitstates.py  bitstrings.py  canvas.py  circuit.py  control.py  gatedecl.py  gates.py  ifstatement.py  instruction.py  json_utils.py  lazy.py  matrices.py  measure.py  operation.py  parallel.py  printutils.py  qcsr.py  qcsresults.py  remote.py  reset.py  unicode.py
schemas/: circuit.json
scripts/: bump-mimiqlink.sh
tests/: test_aliasing.py  test_amplitude.py  test_backends.py  test_backends_remote.py  test_barrier.py  test_bitstate.py  test_block.py  test_circuit.py  test_circuitproto.py  test_circuittester.py  test_classical.py  test_complex.py  test_control.py  test_dag.py  test_decomposition.py  test_decomposition_framework.py  test_gatecustom_decomp.py  test_gates.py  test_hamiltonian.py  test_ifstatement.py  test_inverse.py  test_json.py  test_listvars.py  test_loss.py  test_lossproto.py  test_matrix_decompositions.py  test_measure.py  test_noise.py  test_noisemodel.py  test_noisemodelproto.py  test_optimization.py  test_parallel.py  test_power.py  test_progress.py  test_proto.py  test_qasm.py  test_qcsr.py  test_remove_swaps.py  test_removeswapsunused.py  test_repeat.py  (+5 more)
usecases/: circuit_tester.html  index.html  vqe.html
(+711 files in other folders)
