[project]
name = "mimiqcircuits"
version = "0.18.1"
description = "User API for MIMIQ by QPerfect. Build quantum circuits, schedule remote simulations, and explore simulation results."
authors = [{ name = "Guido Masella", email = "guido.masella@qperfect.io" }]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "numpy (>=1.26,<3.0)",
    "mimiqlink (>=0.8,<0.9)",
    "bitarray (>=2.9,<3)",
    "symengine (>=0.11,<1.0)",
    "sympy (>=1.12,<2)",
    "protobuf (>=6.30,<7)",
    "scipy (>=1.13,<2)",
]
license = "Apache-2.0"

[project.urls]
Documentation = "https://docs.qperfect.io"
Repository = "https://github.com/qperfect-io/mimiqcircuits-python"

[project.optional-dependencies]
visualization = ["matplotlib (>=3.8,<4)"]

[tool.poetry]
packages = [{ include = "mimiqcircuits", from = "src" }]

[tool.poetry.dependencies]
scipy = [
    { version = "1.13", markers = "python_version == '3.9'" },
    { version = ">1.13,<=2", markers = "python_version > '3.9'" },
]

[tool.poetry.group.test.dependencies]
pytest = "^8.2"
pytest-accept = "^0.1"
pytest-doctest-import = "^0.1"
pytest-benchmark = "^4.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3"
pydata-sphinx-theme = "^0.15"
jupyter-sphinx = "^0.5"
sphinx-copybutton = "^0.5"
sphinx-inline-tabs = "^2023.4"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
